TAG: seqcacheload-6-0-22-3
STAFF: lec
CHANGES:
wts2-1202/fl2-396/seqdummy.py needs to use autosequence for SEQ_Source_Assoc
Refseqload failed saturday night. Something up with Seq_Source_Assoc._assoc_key autosequence?
seqdummy.py : needs to use seq_source_assoc/autosequence

TAG: seqcacheload-6-0-22-2
TAG: seqcacheload-6-0-22-1
DATE: 04/26/2022, 05/04/2023
STAFF: sc
CHANGES:
wts2-1050/Florida Too Project
1. added seqmarker_parupdate.py - post-processing for par
2. seqmarker.csh - add call to post-processing for par

TAG: seqcacheload-6-0-19-2
DATE: 05/18/2022, 03/30/2022, 04/11/2022
STAFF: lec
wts2-869/in last change, transcript/polypeptide accidentally removed

TAG: seqcacheload-6-0-19-1
TAG: seqcacheload-6-0-18-4
TAG: seqcacheload-6-0-18-3
TAG: seqcacheload-6-0-18-2
TAG: seqcacheload-6-0-18-1
DATE: 03/24/2022, 03/30/2022, 04/11/2022
STAFF: lec
wts2-813/cre2022/Regulatory Features Ensembl & VISTA

seqmarker.py: added
175 | BioType VISTA
176 | BioType Ensembl Regulatory Feature

TAG: seqcacheload-6-0-16-1
DATE: 08/21/2020
STAFF: lec
TR13204/Infrastructure Release

TAG: seqcacheload-6-0-13-1
DATE: 09/04/2018
STAFF: lec  
CHANGES: TR12734/GenFevah merge
remove VEGA

TAG: seqcacheload-6-0-9-1
DATE: 04/04/2018
STAFF: sc
CHANGES: TR9835 Mice Crispies project
1) seqmarker.py - allow Genbank CON division seqs
    be chosen as rep genomic

TAG: seqcacheload-6-0-8-1
DATE: 02/15/2018
STAFF: lec 
CHANGES:
1) TR11083/Nomenclature/Marker schema merge

TAG: seqcacheload-6-0-7-1
DATE: 01/04/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: seqcacheload-6-0-4-1
DATE: 06/16/2016
STAFF: lec
CHANGES:
1) convert to git

TAG: seqcacheload-6-0-2-4
TAG: seqcacheload-6-0-2-3
TAG: seqcacheload-6-0-2-2
TAG: seqcacheload-6-0-2-1
DATE: 12/02/2015, 12/07/2015
STAFF: lec
CHANGES:
seqmarker.py
1) TR12070/12038/dots/dfci/nia
2) TR12070/12116/bitype conflicts

branch is :  tr12070-1
(made a mistake when making tr12070 branch)

TAG: seqcacheload-tr12070-1
DATE: 12/02/2015